--- a/frontend/src/index.html
+++ b/frontend/src/index.html
@@ -7,7 +7,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
 </head>
-<body class="text-zinc-700 bg-slate-50 box-border overflow-hidden">
+<body class="text-zinc-700 bg-slate-50 box-border overflow-scroll">
   <app-root></app-root>
 </body>
 </html>
